add my all code mama

--- a/style.css
+++ b/style.css
@@ -103,21 +103,19 @@ font-family: 'Dancing Script', cursive;
 
 
 html{font-size: 62.5%;}
-@media all and(max-width:1310px) {
+
+@media all and(max-width:1200) {
     html{font-size: 62.5%;}  
 }
-@media all and(max-width:1200px) {
+@media all and(max-width:1000px) {
     html{font-size: 55.5%;}  
 }
-@media all and(max-width:1010px) {
+@media all and(max-width:900px) {
     html{font-size: 48.5%;}  
 }
-@media all and(max-width:910px) {
+@media all and(max-width:700px) {
     html{font-size: 38.5%;}  
 }
-@media all and(max-width:700px) {
-    html{font-size: 28.5%;}  
-}
 @media all and(max-width:500px) {
-    html{font-size: 24.5%;}  
+    html{font-size: 28.5%;}  
 }
