--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 html{font-size: 62.5%;}
 
-@media screen and(max-width:1200px) {html{font-size: 60%;}}
+@media(max-width:1200px) {html{font-size: 60%;}}
 
-@media screen and(max-width:1000px) {html{font-size: 50%;}}
+@media(max-width:1000px) {html{font-size: 50%;}}
 
-@media screen and(max-width:900px) {html{font-size: 40%;} body{background-color: red;}}
+@media(max-width:900px) {html{font-size: 40%;} body{background-color: rgb(224, 224, 224);}}
 
-@media screen and(max-width:700px) {html{font-size: 30%;}}
+@media(max-width:700px) {html{font-size: 30%;}}
 
 
 
